--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "eslint": "^8.7.0",
     "eslint-plugin-jest-dom": "^4.0.1",
-    "eslint-plugin-testing-library": "^5.0.4"
+    "eslint-plugin-testing-library": "^5.0.4",
+    "nock": "^13.2.2"
   }
 }
